--- a/notes.html
+++ b/notes.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html>
-
+<html></html>
 <head>
+  <title>Notes App</title>
+  <link href="/style/style.css" rel="stylesheet">
 </head>
-
 <body>
-  <h1>Notes App</h1>
-  <h2>Take notes and never forgot</h2>
-  <input id="search-text" type="text" placeholder="Search Notes">
-  <select id="filterBy">
-    <option value="byEdited">Sort by last edited</option>
-    <option value="byCreated">Sort by recently created</option>
-    <option value="alphabetical">Sort alphabetically</option>
-  </select>
+  <header class="header">
+    <div class="container"> 
+      <h1 class="header__title">Notes App</h1>
+      <h2 class="header__subtitle">Take notes and never forgot</h2></div>
+    </header>
+<div class="actions">
+  <div class="actions__container">
+      <input id="search-text" type="text" class="input" placeholder="Search Notes">
+      <select id="filterBy" class="dropdown">
+        <option value="byEdited">Sort by last edited</option>
+        <option value="byCreated">Sort by recently created</option>
+        <option value="alphabetical">Sort alphabetically</option>
+      </select>
+  </div>
+</div>
+<div class="container">
   <div id="notes"></div>
-  <button id="create-note">Create Note</button>
+  <button id="create-note" class="button">Create Note</button>
+</div>
+
+
 
   <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js"></script>
-  <script src="notes-functions.js"></script>
-  <script src="notes-app.js"></script>
+  <script src="/scripts/notes-functions.js"></script>
+  <script src="/scripts/notes-app.js"></script>
 </body>
-
 </html>
