fixed delete notes

--- a/edit.html
+++ b/edit.html
@@ -11,7 +11,7 @@
     </header>
     <div class="actions">
       <div class="actions__container actions__container--spaced" >
-        <a href="/notes.html">home</a>
+        <a href="/index.html">home</a>
         <span id="last-edited"></span>
       </div>
     </div>
