--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 
-  <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
+  <script src="/scripts/uuidv4.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js"></script>
   <script src="/scripts/notes-functions.js"></script>
   <script src="/scripts/notes-app.js"></script>
