--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <header class="header">
     <div class="container"> 
       <h1 class="header__title">Notes App</h1>
-      <h2 class="header__subtitle">Take notes and never forget</h2></div>
+      <h2 class="header__subtitle">Organize your life</h2></div>
     </header>
 <div class="actions">
   <div class="actions__container">
