--- a/public/edit.html
+++ b/public/edit.html
@@ -7,7 +7,7 @@
   <header class="header">
     <div class="container"> 
       <h1 class="header__title">Notes App</h1>
-      <h2 class="header__subtitle">Take notes and never forgot</h2></div>
+      <h2 class="header__subtitle">Organize your life</h2></div>
     </header>
     <div class="actions">
       <div class="actions__container actions__container--spaced" >
