removed node_modules

--- a/public/edit.html
+++ b/public/edit.html
@@ -7,11 +7,11 @@
   <header class="header">
     <div class="container"> 
       <h1 class="header__title">Notes App</h1>
-      <h2 class="header__subtitle">Organize your life</h2></div>
+      <h2 class="header__subtitle">Organize Your Life</h2></div>
     </header>
     <div class="actions">
       <div class="actions__container actions__container--spaced" >
-        <a id="buttonHome" href="/index.html">home</a>
+        <a id="buttonHome" href="/index.html">Home</a>
         <span id="last-edited"></span>
       </div>
     </div>
